--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -37,24 +37,17 @@
         }
     }
 
-    &__title {
-        margin-left: 0;
-        margin-bottom: 10px;
-
-        @media #{$phone} {
-            margin-bottom: 25px;
-        }
-    }
-
     &__img {
         display: flex;
         height: auto;
         max-width: 100%;
         border-radius: 20px;
+        margin-top: 10px;
         margin-bottom: 43px;
         pointer-events: none;
 
         @media #{$phone} {
+            margin-top: 25px;
             margin-bottom: 37px;
         }
     }
@@ -62,9 +55,11 @@
     &__content {
         display: flex;
         flex-direction: column;
+        margin-top: 10px;
         margin-left: 50px;
 
         @media #{$phone} {
+            margin-top: 0;
             margin-left: 0;
         }
     }
