--- a/styles/components/_nav-chain.scss
+++ b/styles/components/_nav-chain.scss
@@ -1,5 +1,5 @@
 .nav-chain {
-    margin: 150px 8.5% 0;
+    margin: 150px 8.5% 35px;
 
     @media screen and (max-width: 1169px) {
         margin: 150px 10px 0;
