--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,3 +23,6 @@
 @import "components/sales-department";
 @import "components/select";
 @import "components/news-content";
+@import "components/ipoteka";
+@import "components/partners";
+@import "components/page-404";
