--- a/styles/components/_calc-ipoteka.scss
+++ b/styles/components/_calc-ipoteka.scss
@@ -1,30 +1,27 @@
 .calc-ipoteka {
-    margin-bottom: 175px;
+    position: relative;
+    width: 83%;
+    margin: 0 auto 175px;
 
-    &__title {
-        margin-top: 164px;
-        margin-bottom: 66px;
+    @media #{$phone} {
+        width: calc(100% - 26px);
+        margin: 25px 13px 175px;
     }
 
     &__wrap {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 83%;
         height: 531px;
-        margin: 0 auto;
+        margin-top: 100px;
         border-radius: 87px;
         border: 1px solid #DEE7EE;
 
         @media #{$desktop} {
             flex-direction: column;
             height: auto;
-        }
-
-        @media #{$phone} {
-            border-radius: 50px;
-            width: calc(100% - 26px);
-            margin: 0 13px;
+            border: none;
+            margin-top: 25px;
         }
     }
 
@@ -33,34 +30,16 @@
 
         @media #{$phone} {
             margin: 0;
+            width: 100%;
         }
     }
 
     &__banks {
-        transform: translate(60px, -20px);
-
-        @media screen and (max-width: 1880px) {
-            transform: translate(20px, -20px);
-        }
-
-        @media screen and (max-width: 1800px) {
-            transform: translate(60px, -20px);
-        }
-
-        @media screen and (max-width: 1520px) {
-            transform: translate(20px, -20px);
-        }
-
-        @media screen and (max-width: 1420px) {
-            transform: translate(0, -20px);
-        }
-
-        @media screen and (max-width: 1350px) {
-            transform: translate(60px, -20px);
-        }
+        transform: translate(40px, -20px);
 
         @media #{$desktop} {
-            transform: translate(0, 60px);
+            transform: translate(0);
+            margin-top: 20px;
         }
 
         &__title {
@@ -72,38 +51,19 @@
 
             @media #{$tablet} {
                 width: max-content;
-                margin-left: auto;
-                margin-right: auto;
+                margin-top: 38px;
+                margin-bottom: 14px;
             }
         }
 
         &_list {
             display: flex;
             flex-wrap: wrap;
-            width: 800px;
+            gap: 20px;
+            width: 100%;
 
-            @media screen and (max-width: 1700px) {
-                width: 640px;
-            }
-
-            @media screen and (max-width: 1350px) {
-                width: 620px;
-            }
-
-            @media #{$desktop} {
-                width: 800px;
-            }
-
-            @media screen and (max-width: 820px) {
-                width: 640px;
-            }
-
-            @media screen and (max-width: 640px) {
-                width: 380px;
-            }
-
-            @media screen and (max-width: 450px) {
-                width: 300px;
+            @media #{$phone} {
+                justify-content: center;
             }
         }
 
@@ -112,38 +72,17 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            background: #F4F6F9;
+            background: #FCFCFD;
             box-sizing: border-box;
-            width: 380px;
+            width: 48%;
             height: 193px;
             padding: 0 25px 15px;
             border-radius: 31px;
-            margin: 0 20px 20px 0;
             transition: opacity .3s linear;
 
-            @media screen and (max-width: 1700px) {
-                width: 300px;
-                padding: 0 20px 15px;
-            }
-
-            @media screen and (max-width: 1350px) {
-                margin: 0 10px 20px 0;
-            }
-
-            @media #{$desktop} {
-                width: 380px;
-                padding: 0 25px 15px;
-                margin: 0 10px 20px 10px;
-            }
-
-            @media screen and (max-width: 820px) {
-                width: 300px;
-                padding: 0 20px 15px;
-            }
-
-            @media screen and (max-width: 640px) {
-                width: 380px;
-                margin: 0 0 10px 0;
+            @media #{$phone} {
+                width: 100%;
+                height: 150px;
             }
 
             // &.disabled {
@@ -195,7 +134,6 @@
 
 
     &__control {
-        position: relative;
         width: 725px;
         margin-left: 48px;
 
@@ -203,36 +141,25 @@
             width: 600px;
         }
 
-        @media screen and (max-width: 1520px) {
+        @media screen and (max-width: 1590px) {
             width: 500px;
         }
 
-        @media screen and (max-width: 1350px) {
+        @media screen and (max-width: 1460px) {
             width: 400px;
         }
 
         @media #{$desktop} {
-            width: 725px;
-        }
-
-        @media #{$tablet} {
-            width: 600px;
-        }
-
-        @media screen and (max-width: 820px) {
-            width: 500px;
-        }
-
-        @media screen and (max-width: 820px) {
-            width: 400px;
-        }
-
-        @media #{$phone} {
+            width: 100%;
+            box-sizing: border-box;
+            padding: 30px;
+            border: 1px solid #DEE7EE;
+            border-radius: 30px;
             margin: 0;
         }
 
-        @media screen and (max-width: 450px) {
-            width: 300px;
+        @media #{$phone} {
+            padding: 0 15px;
         }
     }
 
@@ -243,7 +170,7 @@
 }
 
 .ipoteka-control {
-    position: relative;
+    // position: relative;
     z-index: 5;
 
     @media #{$desktop} {
@@ -391,17 +318,25 @@
         margin-top: 35px;
 
         @media screen and (max-width: 820px) {
-            flex-direction: column;
+            flex-direction: column-reverse;
+        }
+
+        @media #{$phone} {
+            position: absolute;
+            width: 100%;
+            left: 0;
+            bottom: -175px;
         }
 
         .ipoteka-control__btn.btn.btn-new {
             font-family: $main-font;
             font-size: 20px;
             font-weight: $font-weight-bold;
+            line-height: 62px;
             color: $color-gray;
             background-color: #C8D9E3;
             white-space: nowrap;
-            padding: 21px 65px;
+            padding: 0 65px;
             border-radius: 31px;
             margin-right: 40px;
             cursor: pointer;
@@ -413,7 +348,13 @@
 
             @media screen and (max-width: 820px) {
                 margin-right: 0;
-                margin-bottom: 20px;
+            }
+
+            @media #{$phone} {
+                text-align: center;
+                width: 320px;
+                padding: 0;
+                line-height: 40px;
             }
         }
 
@@ -433,6 +374,7 @@
 
             @media screen and (max-width: 820px) {
                 text-align: center;
+                margin-bottom: 20px;
             }
         }
     }
