--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,6 +23,7 @@
 @import "components/sales-department";
 @import "components/select";
 @import "components/news-content";
+@import "components/show-more";
 @import "components/ipoteka";
 @import "components/partners";
 @import "components/page-404";
