--- a/styles/components/_nav-chain.scss
+++ b/styles/components/_nav-chain.scss
@@ -2,7 +2,7 @@
     margin: 150px 8.5% 35px;
 
     @media screen and (max-width: 1169px) {
-        margin: 150px 10px 0;
+        margin: 150px 10px 25px;
     }
 
     @media #{$tablet} {
