--- a/styles/components/_select.scss
+++ b/styles/components/_select.scss
@@ -1,139 +1,422 @@
 .select-apartment {
     display: flex;
     flex-direction: column;
+    margin-bottom: 50px;
 
-    &__title {
-        margin-top: 194px;
-        margin-bottom: 86px;
+    &__filter {
+        background-color: $color-white;
+        padding-bottom: 18px;
+        margin-bottom: 82px;
 
-        @media #{$tablet} {
-            margin: 100px 0 33px 0;
+        &>div {
+            width: 83%;
+            margin: 32px auto 0;
+
+            @media #{$phone} {
+                width: calc(100% - 20px);
+                margin: 32px 10px 0;
+            }
         }
 
-        @media #{$phone} {
-            margin: 100px 0 10px 0;
-        }
+        &__display {
+            display: flex;
+            align-items: center;
+            width: max-content;
+            height: 47px;
+            border: 1px #C8D9E3 solid;
+            border-radius: 10px;
 
-        @media screen and (max-width: 600px) {
-            margin-left: 13px;
+            .display-selected {
+                rect {
+                    fill: #4A7D98;
+                }
+            }
+
+            a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 55px;
+                height: calc(100% - 10px);
+                background-color: transparent;
+                border: none;
+
+                &:nth-of-type(1) {
+                    border-right: 1px #D6E2EA solid;
+                }
+
+                rect {
+                    transition: all .1s linear;
+                }
+            }
         }
     }
 
     &__content {
         display: flex;
         justify-content: center;
+        gap: 25px 1.5%;
         flex-wrap: wrap;
-        width: 83%;
-        margin: 0 auto;
+
+        @media #{$desktop} {
+            gap: 13px;
+        }
     }
 
     &__card {
-        background-color: #F4F6F9;
+        position: relative;
+        width: 23.8%;
+        box-sizing: border-box;
+        background-color: $color-white;
         border-radius: 10px;
         transition: all .1s linear;
-        margin: 0 15px 15px 0;
         text-decoration: none;
+        padding: 15px 20px;
+
+        @media screen and (max-width: 1450px) {
+            width: 32.2%;
+        }
 
         @media #{$tablet} {
-            &:nth-child(even) {
-                margin-right: 0;
-            }
+            width: 48.5%;
         }
 
-        @media screen and (max-width: 913px) {
-            margin-right: 0;
-        }
-
-        @media screen and (max-width: 400px) {
-            margin-left: 15px;
-            margin-right: 15px !important;
+        @media screen and (max-width: 500px) {
+            width: 100%;
         }
 
         &:hover {
             box-shadow: 0px 0px 50px 0px rgba(23, 51, 66, 0.20);
-            cursor: pointer;
         }
 
-        &:hover &__like {
+        &:hover &__footer > a {
             path {
-                fill: #FC9D27;
+                stroke: #5F9FC0;
             }
         }
 
-        &:hover &__rating {
-            path {
-                stroke: #FC9D27;
-            }
+        &__link {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            text-decoration: none;
+            border-radius: 10px;
+            -webkit-user-drag: none;
+            z-index: 1;
         }
 
-        &__info {
-            max-width: 183px;
+        &__header {
             display: flex;
             flex-direction: column;
-            margin: 15px 0 40px 20px;
+
+            p {
+                font-family: $second-font;
+                width: max-content;
+                z-index: 2;
+            }
         }
 
-        &__second-text {
-            font-family: $second-font;
+        &__location {
             font-size: $font-size-base;
-            font-weight: $font-weight-base;
             line-height: 20px;
             color: #8EA4B0;
             margin-bottom: 5px;
-
-            &:last-child {
-                margin-top: 5px;
-            }
         }
 
-        &__text {
-            font-family: $second-font;
+        &__size {
             font-size: 22px;
             font-weight: $font-weight-bold;
             line-height: 22px;
             color: $color-black;
+        }
+        
+        &__price {
+            font-size: 22px;
+            color: $color-light-gray;
+        }
 
-            span {
-                color: $color-light-gray;
+        &__price-meter {
+            font-size: $font-size-base;
+            color: #8EA4B0;
+            margin-top: 5px;
+        }
+
+        &__image-box {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 270px;
+            padding: 8% 10px;
+
+            img {
+                max-width: 100%;
+                max-height: 100%;
             }
         }
 
-        &__image {
-            margin: 0 30px 64px;
+        &__footer {
+            display: flex;
+            margin-right: 10px;
+
+            p {
+                font-family: $second-font;
+                font-size: $font-size-base;
+                font-weight: $font-weight-base;
+                line-height: 22px;
+                color: #BCC5CA;
+                margin-top: 7px;
+                z-index: 2;
+
+                @media #{$desktop} {
+                    font-size: 14px;
+                }
+            }
+
+            a {
+                margin: 0 0 7px auto;
+                z-index: 2;
+
+                &:hover {
+                    path {
+                        stroke: #FC9D27 !important;
+                    }
+                }
+    
+                path {
+                    transition: all .1s linear;
+                    fill: transparent;
+                    stroke: transparent;
+                }
+            }
+        }
+    }
+}
+
+.select-apartment__content.select-apartment__content__list {
+    width: 83%;
+    margin: 0 auto;
+    gap: 20px;
+
+    @media #{$tablet} {
+        width: calc(100% - 20px);
+        margin: 0 10px;
+        gap: 13px;
+    }
+
+    .select-apartment__card {
+        display: flex;
+        width: 100%;
+
+        img {
+            width: 172px;
+            height: max-content;
+            margin: 23px 7% 28px 3.5%;
+            z-index: 0;
+
+            @media #{$tablet} {
+                margin: 23px 3.5% 28px;
+            }
+
+            @media screen and (max-width: 500px) {
+                margin: auto 5px;
+            }
+        }
+
+        &>div {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            margin: 34px 0 60px;
 
             @media #{$phone} {
-                margin-bottom: 40px;
+                margin-bottom: 34px;
             }
 
-            @media screen and (max-width: 400px) {
-                margin: 0 15px 40px;
+            &>p {
+                font-family: $second-font;
+                font-size: 22px;
+                font-weight: $font-weight-bold;
+                line-height: 22px;
+                color: $color-black;
+                z-index: 2;
+    
+                @media screen and (max-width: 500px) {
+                    font-size: 18px;
+                    text-align: right;
+                    padding-right: 5px;
+                }
+            }
+
+            &>div {
+                display: flex;
+                margin-top: 35px;
+
+                @media #{$phone} {
+                    flex-direction: column;
+                }
             }
         }
 
-        &__bottom {
+        a:nth-of-type(2) {
             display: flex;
-            margin: 0 33px 18px 20px;
-        }
+            justify-content: center;
+            align-items: center;
+            margin: auto 4.6% auto 14.2%;
+            height: max-content;
+            z-index: 2;
 
-        &__date {
-            font-family: $second-font;
-            font-size: $font-size-base;
-            font-weight: $font-weight-base;
-            line-height: 22px;
-            color: #BCC5CA;
-        }
+            @media screen and (max-width: 1320px) {
+                margin-left: 4.6%;
+            }
 
-        &__like {
-            margin: 0 20px 0 auto;
-        }
+            @media #{$phone} {
+                position: absolute;
+                margin: 0;
+                top: 34px;
+                right: 15px;
+            }
 
-        &__like,
-        &__rating {
+            @media screen and (max-width: 500px) {
+                width: max-content;
+                top: 10px;
+                left: 5px;
+            }
+
+            &:hover {
+                path {
+                    stroke: #FC9D27 !important;
+                }
+            }
+
             path {
                 transition: all .1s linear;
-                fill: transparent;
-                stroke: transparent;
+                stroke: #5F9FC0;
             }
         }
+
+        &__price,
+        &__place {
+            display: flex;
+            flex-direction: column;
+            width: 50%;
+
+            @media #{$phone} {
+                width: auto;
+            }
+        }
+
+        &__price-box {
+            border-right: 1px #CADAE4 solid;
+            padding-right: 9.4%;
+
+            @media #{$tablet} {
+                padding-right: 2.5%;
+            }
+
+            @media #{$phone} {
+                border: none;
+                padding-right: 15px;
+                margin-bottom: 15px;
+            }
+            
+            @media screen and (max-width: 500px) {
+                padding-right: 5px;
+            }
+
+            p {
+                font-family: $second-font;
+                display: flex;
+                font-size: 18px;
+                font-weight: $font-weight-bold;
+                text-align: right;
+                color: #373737;
+                z-index: 2;
+
+                @media screen and (max-width: 500px) {
+                    font-size: 14px;
+                }
+
+                &:nth-of-type(1) {
+                    margin-bottom: 10px;
+                }
+
+                span {
+                    margin-right: auto;
+                    font-size: $font-size-base;
+                    font-weight: $font-weight-base;
+                    line-height: 20px;
+                    color: #8EA4B0;
+
+                    @media screen and (max-width: 500px) {
+                        font-size: 12px;
+                    }
+                }
+            }
+        }
+
+        &__place-box {
+            justify-content: space-between;
+            box-sizing: border-box;
+            padding: 0 0 0 9.4%;
+            height: auto;
+
+            @media #{$tablet} {
+                padding-left: 2.5%;
+            }
+
+            @media #{$phone} {
+                flex-direction: row;
+                padding-left: 0;
+                padding-right: 15px;
+            }
+
+            @media screen and (max-width: 630px) {
+                flex-direction: column;
+            }
+
+            @media screen and (max-width: 500px) {
+                padding-right: 5px;
+            }
+
+            p {
+                font-family: $second-font;
+                font-size: $font-size-base;
+                line-height: 20px;
+                color: #8EA4B0;
+                z-index: 2;
+
+                @media screen and (max-width: 630px) {
+                    text-align: right;
+                }
+
+                @media screen and (max-width: 500px) {
+                    line-height: 14px;
+                    font-size: 12px;
+                }
+
+                &:nth-of-type(1) {
+                    line-height: 20px;
+                    color: #8EA4B0;
+                    margin-bottom: 5px;
+                }
+
+                &:nth-of-type(2) {
+                    line-height: 22px;
+                    color: #BCC5CA;
+                }
+            }
+        }
+    }
+}
+
+.section-box {
+    width: 83%;
+    margin: 0 auto;
+
+    @media #{$phone} {
+        width: calc(100% - 20px);
+        margin: 0 10px;
     }
 }
